# qt-jdenticon

./: .clang-format  CHANGELOG.md  CMakeLists.txt  LICENSE  QtIdenticon.pro  README.md  qmldir
src/: identicon.cpp  identicon.h  identiconstyle.cpp  identiconstyle.h  jdenticonplugin.cpp  jdenticonplugin.h  qtidenticon.cpp  qtidenticon.h  qtidenticon_global.h
src/rendering/: colortheme.cpp  colortheme.h  colorutils.cpp  colorutils.h  icongenerator.cpp  icongenerator.h  rectangle.cpp  rectangle.h  renderer.h  svgpath.cpp  svgpath.h  svgrenderer.cpp  svgrenderer.h  transform.cpp  transform.h
src/shapes/: shape.cpp  shape.h  shapecategory.cpp  shapecategory.h  shapedefinitions.cpp  shapedefinitions.h  shapeposition.cpp  shapeposition.h
